Subida imaganes y modificaciones

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -209,8 +209,9 @@ doi = {10.1145/3160489.3160492}
 
 @article{de2008aprendizaje,
   title={Aprendizaje basado en Problemas},
-  author={de Innovaci{\'o}n Educativa, Servicio},
-  journal={Gu{\'\i}as r{\'a}pidas sobre nuevas metodolog{\'\i}as, Disponible en http://innovacioneducativa. upm. es/guias/Aprendizaje\_basado\_en\_problemas. pdf},
+  author={de Innovación Educativa, Servicio},
+  journal={Guías rápidas sobre nuevas metodologías},
+  howpublished={\url{http://innovacioneducativa. upm. es/guias/Aprendizaje\_basado\_en\_problemas. pdf}},
   year={2008}
 }
 
@@ -554,3 +555,31 @@ doi = {10.1145/3160489.3160492}
     howpublished = {\url{https://pypi.org/project/psycopg2-binary/}},
     note = {Accedido el: 11 de Noviembre, 2023}
 }
+
+@article{ariga2011brief,
+  title={Brief and rare mental "breaks" keep you focused: Deactivation and reactivation of task goals preempt vigilance decrements},
+  author={Ariga, Atsunori and Lleras, Alejandro},
+  journal={Cognition},
+  volume={118},
+  number={3},
+  pages={439--443},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@misc{postman,
+    title = {Postman},
+    author = {Abhinav Asthana},
+    year = {2012},
+    howpublished = {\url{https://www.postman.com/}},
+    note = {Accedido el: 12 de Noviembre, 2023}
+}
+
+@misc{jmeter,
+    title = {Jmeter},
+    author = {Apache},
+    year = {2011},
+    howpublished = {\url{https://jmeter.apache.org/}},
+    note = {Accedido el: 12 de Noviembre, 2023}
+}
+
